# kiran-authentication-service

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README  README.en.md  README.md  config.h.in
data/: CMakeLists.txt  com.kylinsec.Kiran.AuthDevice.Device.xml  com.kylinsec.Kiran.AuthDevice.xml  com.kylinsec.Kiran.Authentication.Session.xml  com.kylinsec.Kiran.Authentication.User.xml  com.kylinsec.Kiran.Authentication.policy.in  com.kylinsec.Kiran.Authentication.service.in  com.kylinsec.Kiran.Authentication.xml  com.kylinsec.Kiran.Biometrics.Device.xml  com.kylinsec.Kiran.Biometrics.FPDevice.xml  com.kylinsec.Kiran.Biometrics.xml  com.kylinsec.Kiran.SystemDaemon.Authentication.service.in  com.kylinsec.Kiran.SystemDaemon.Authentication.xml  com.kylinsec.Kiran.SystemDaemon.Biometrics.xml  custom.conf  kad.ini  kiran-auth-service  kiran-authentication-devices.service.in  kiran-authentication-service  kiran-authentication-service.pc.in  kiran-system-daemon-authentication.service.in  kiran_authentication.conf  system-auth
data/autostart/: kiran-leave-detecter.desktop.in
data/dbus/: com.kylinsec.Kiran.AuthDevice.Device.xml  com.kylinsec.Kiran.AuthDevice.conf  com.kylinsec.Kiran.AuthDevice.xml  com.kylinsec.Kiran.Authentication.Session.xml  com.kylinsec.Kiran.Authentication.User.xml  com.kylinsec.Kiran.Authentication.conf  com.kylinsec.Kiran.Authentication.xml
data/runtime/: lib64  pack.sh
data/services/initd/: kiran-authentication-daemon  kiran-authentication-devices
data/services/systemd/: com.kylinsec.Kiran.AuthDevice.service.in  com.kylinsec.Kiran.Authentication.service.in  kiran-authentication-daemon.service.in  kiran-authentication-devices.service.in
include/: auxiliary.h  (+2 more)
lib/: CMakeLists.txt  feature-data.h  feature-db.cpp  feature-db.h  utils.cpp  utils.h
src/: CMakeLists.txt  authentication_i.h  config.h.in  kiran-auth-service.c  kiran-auth-service.h  kiran-authentication.c  main.c  pam-kiran-authentication.c
src/daemon/: CMakeLists.txt  auth-config.cpp  auth-config.h  auth-manager.cpp  auth-manager.h  config-daemon.h.in  error.cpp  error.h  iexternal-auth-adapter.h  kiran-authentication-daemon.sh  logging-category.cpp  logging-category.h  main.cpp  session.cpp  session.h  user-config.cpp  user-config.h  user-manager.cpp  user-manager.h  user.cpp  user.h  utils.cpp  utils.h
src/daemon/device/: device-adaptor-factory.cpp  device-adaptor-factory.h  device-adaptor.cpp  device-adaptor.h  device-decorator.cpp  device-decorator.h  device-protocol.h  device-request-controller.cpp  device-request-controller.h  device-request-dispatcher.cpp  device-request-dispatcher.h  face-device-decorator.cpp  face-device-decorator.h  fp-device-decorator.cpp  fp-device-decorator.h
src/daemon/json/: auth-device.cpp  auth-device.h
src/daemon/proxy/: dbus-daemon-proxy.cpp  dbus-daemon-proxy.h  login1-manager-proxy.cpp  login1-manager-proxy.h  login1-seat-proxy.cpp  login1-seat-proxy.h  login1-session-proxy.cpp  login1-session-proxy.h  polkit-proxy.cpp  polkit-proxy.h
src/device/: CMakeLists.txt  driver-loader.cpp  manager.cpp  manager.h
src/device-manager/: CMakeLists.txt  driver-loader.cpp  driver-loader.h  kiran-authentication-devices.sh  main.cpp  manager.cpp  manager.h  udev-monitor.cpp
src/device-manager/device/: device.cpp  device.h  ukey-device.cpp  ukey-device.h  virtual-code-base-device.cpp  virtual-code-device.cpp  virtual-code-device.h  virtual-code-no-camera-device.h  virtual-face-device.cpp  virtual-face-device.h
src/device-manager/driver/: driver.h  physical-driver.h  ukey-driver.h  virtual-code-driver.h  virtual-driver.h  virtual-face-driver.h
src/device/adaptor/: device.cpp  device.h  soft-code-base-device.cpp  soft-code-base-device.h  soft-code-device.cpp  soft-code-device.h  soft-code-no-camera-device.cpp  soft-code-no-camera-device.h  soft-face-device.cpp  soft-face-device.h  ukey-device.cpp  ukey-device.h  virtual-code-base-device.cpp  virtual-code-base-device.h  virtual-code-device.cpp  virtual-code-no-camera-device.cpp  virtual-face-device.cpp  virtual-face-device.h
src/device/device/: ukey-device.cpp  virtual-code-base-device.h  virtual-code-device.cpp  virtual-code-device.h  virtual-code-no-camera-device.cpp  virtual-face-device.cpp
src/device/driver/: driver.h  virtual-code-driver.h
src/device/loader/: driver-loader.cpp  driver-loader.h  udev-monitor.cpp  udev-monitor.h
src/driver/virtual/: CMakeLists.txt
src/driver/virtual/czht/: CMakeLists.txt  czht-code-driver.cpp  czht-code-driver.h  czht-driver.cpp  czht-driver.h  czht-error.h
src/driver/virtual/czht/adapter/: czht-auth-adapter.cpp  czht-auth-adapter.h
src/driver/virtual/czht/code/: CMakeLists.txt  czht-code-driver.cpp  czht-code-driver.h  czht-code-no-camera-driver.cpp  czht-code-no-camera-driver.h
src/driver/virtual/czht/data/: CMakeLists.txt  config.ini
src/driver/virtual/czht/face/: CMakeLists.txt  czht-face-driver.cpp  czht-face-driver.h
src/driver/virtual/czht/gen-code/: CMakeLists.txt  gen-code-dialog.cpp  gen-code-dialog.h  main.cpp
src/driver/virtual/czht/include/: czht-define.h  czht-driver-base.cpp  czht-driver-base.h
src/driver/virtual/czht/leave-detecter/: CMakeLists.txt  leave-detecter.cpp  leave-detecter.h  main.cpp
src/driver/virtual/czht/screen-recorder/: CMakeLists.txt  main.cpp  screen-recorder.cpp  screen-recorder.h
src/driver/virtual/czht/tools/: CMakeLists.txt
src/driver/virtual/kiran/: CMakeLists.txt
src/driver/virtual/kiran/adapter/: kiran-auth-adapter.cpp  kiran-auth-adapter.h
src/driver/virtual/kiran/code/: CMakeLists.txt  kiran-code-driver.cpp  kiran-code-driver.h
src/pam/: CMakeLists.txt  authentication-controller.cpp  authentication-controller.h  authentication-graphical.cpp  authentication-graphical.h  authentication-terminal.cpp  authentication-terminal.h  authentication.cpp  authentication.h  config-pam.h.in  main.cpp  pam-args-parser.cpp  pam-args-parser.h  pam-handle.cpp  pam-handle.h  task-pool.h
src/utils/: utils.cpp  utils.h
vendor-specific/kiran/code/: CMakeLists.txt  kiran-code-driver.cpp  kiran-code-driver.h
(+66 files in other folders)
